--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@graphql-tools/merge": "^9.0.21",
     "bcryptjs": "^3.0.2",
     "connect-mongodb-session": "^5.0.0",
+    "cron": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
